[gd_scene load_steps=22 format=2]

[ext_resource path="res://Event/Event_VeranAppears.gd" type="Script" id=1]
[ext_resource path="res://UI/ShaderNight/Night.tscn" type="PackedScene" id=2]
[ext_resource path="res://Characters/Shadow.png" type="Texture" id=3]
[ext_resource path="res://Characters/NPCS/Nayru/Nayru.png" type="Texture" id=4]
[ext_resource path="res://Characters/NPCS/Veran/Thunder.png" type="Texture" id=5]
[ext_resource path="res://Characters/NPCS/Ralph/ralph.png" type="Texture" id=6]
[ext_resource path="res://Characters/NPCS/Ralph/Sword.png" type="Texture" id=7]
[ext_resource path="res://Characters/NPCS/Animals/Bear/Bear.tscn" type="PackedScene" id=8]
[ext_resource path="res://Characters/NPCS/Animals/Parrot/Parrot.tscn" type="PackedScene" id=9]
[ext_resource path="res://Characters/NPCS/Animals/Rabbit/Rabbit.tscn" type="PackedScene" id=10]
[ext_resource path="res://Characters/NPCS/Animals/Monkeys/Monkey.tscn" type="PackedScene" id=11]
[ext_resource path="res://Characters/NPCS/Impa/Impa.png" type="Texture" id=12]
[ext_resource path="res://Event/Event_VeranAppears1.tres" type="Animation" id=13]
[ext_resource path="res://Event/Event_VeranAppears2.tres" type="Animation" id=14]
[ext_resource path="res://Event/Event_VeranAppears3.tres" type="Animation" id=15]
[ext_resource path="res://Event/Event_VeranAppears4.tres" type="Animation" id=16]
[ext_resource path="res://Event/Event_VeranAppears5.tres" type="Animation" id=17]
[ext_resource path="res://Characters/NPCS/Veran/VeranGhostGreen.png" type="Texture" id=18]
[ext_resource path="res://Characters/NPCS/Veran/VeranHuman.png" type="Texture" id=19]
[ext_resource path="res://UI/FadeToWhite/FadeToWhite.tscn" type="PackedScene" id=20]
[ext_resource path="res://Items/SwordL1/swordL1_item.png" type="Texture" id=21]

[node name="Event_VeranAppears" type="Node2D"]

script = ExtResource( 1 )

[node name="Night" parent="." index="0" instance=ExtResource( 2 )]

[node name="Shadow" type="Sprite" parent="." index="1"]

position = Vector2( 136, 72 )
texture = ExtResource( 3 )
offset = Vector2( 2, -5 )
_sections_unfolded = [ "Offset", "Visibility" ]

[node name="Nayru" type="Sprite" parent="." index="2"]

position = Vector2( 120, 40 )
texture = ExtResource( 4 )
vframes = 2
hframes = 6
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Visibility" ]

[node name="Thunder" type="Sprite" parent="Nayru" index="0"]

visible = false
position = Vector2( -80, -16 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Visibility" ]

[node name="Ralph" type="Sprite" parent="." index="3"]

position = Vector2( 136, 64 )
texture = ExtResource( 6 )
offset = Vector2( 0, -2 )
flip_h = true
vframes = 2
hframes = 4
frame = 1
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="Sword" type="Sprite" parent="Ralph" index="0"]

visible = false
show_behind_parent = true
position = Vector2( -1.75192, -14.832 )
texture = ExtResource( 7 )
offset = Vector2( 3, 3 )
hframes = 2
frame = 1
_sections_unfolded = [ "Animation", "Offset", "Visibility", "Z Index" ]

[node name="Animals" type="Node2D" parent="." index="4"]

[node name="Bear" parent="Animals" index="0" instance=ExtResource( 8 )]

position = Vector2( 88, 56 )

[node name="Parrot" parent="Animals" index="1" instance=ExtResource( 9 )]

position = Vector2( 72, 64 )

[node name="Rabbit" parent="Animals" index="2" instance=ExtResource( 10 )]

position = Vector2( 136, 96 )

[node name="Rabbit2" parent="Animals" index="3" instance=ExtResource( 10 )]

position = Vector2( 104, 88 )

[node name="Monkey" parent="Animals" index="4" instance=ExtResource( 11 )]

position = Vector2( 120, 96 )
initial_animation = 1

[node name="Impa" type="Sprite" parent="." index="5"]

position = Vector2( 56, 120 )
texture = ExtResource( 12 )
flip_h = true
vframes = 2
hframes = 5
frame = 5
region_rect = Rect2( 6, 3, 16, 18 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Visibility" ]

[node name="pos" type="Position2D" parent="." index="6"]

position = Vector2( 120, 64 )

[node name="pos2" type="Position2D" parent="." index="7"]

position = Vector2( 88, 72 )

[node name="pos3" type="Position2D" parent="." index="8"]

position = Vector2( 72, 120 )

[node name="scene_anim" type="AnimationPlayer" parent="." index="9"]

root_node = NodePath("..")
autoplay = "Part1"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Part1 = ExtResource( 13 )
anims/Part2 = ExtResource( 14 )
anims/Part3 = ExtResource( 15 )
anims/Part4 = ExtResource( 16 )
anims/Part5 = ExtResource( 17 )
blend_times = [  ]

[node name="Veran" type="Node2D" parent="." index="10"]

visible = false
_sections_unfolded = [ "Visibility" ]

[node name="VeranGhost" type="Sprite" parent="Veran" index="0"]

position = Vector2( 120, 39 )
texture = ExtResource( 18 )
hframes = 4
_sections_unfolded = [ "Animation", "Transform", "Visibility" ]

[node name="VeranHuman" type="Sprite" parent="Veran" index="1"]

visible = false
position = Vector2( 88, 96 )
texture = ExtResource( 19 )
hframes = 3
_sections_unfolded = [ "Animation", "Transform", "Visibility" ]

[node name="FadeToWhite" parent="." index="11" instance=ExtResource( 20 )]

[node name="Tween" type="Tween" parent="." index="12"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="SwordItem" type="Sprite" parent="." index="13"]

visible = false
position = Vector2( 68.0129, 104.57 )
texture = ExtResource( 21 )
_sections_unfolded = [ "Animation", "Region" ]


